feat(persistence): orquestación manual R2DBC, fix routing WebFlux y cobertura de tests
Implementación de Persistable en entidades, refactor de Controller, fix de schema SQL y tests unitarios completos.